fix(dock-manager): make the UI readable in dark mode
- add missing modules
- change the background color of the selected columns in grids
- change display density of select components to compact

--- a/projects/app-lob/src/app/grid-finjs-dock-manager/grid-finjs-dock-manager.component.scss
+++ b/projects/app-lob/src/app/grid-finjs-dock-manager/grid-finjs-dock-manager.component.scss
@@ -127,6 +127,12 @@
 	}
 }
 
+.dark-theme {
+    --igx-grid-row-selected-background: #084d8d;
+    --igx-grid-row-selected-hover-background: #0d78db;
+    --igx-grid-header-selected-background: #0d78db;
+}
+
 :host ::ng-deep {
 	.grid-area {
 		margin-block-start: 1rem;
